--- a/src/main/resources/templates/auth/sign-up.html
+++ b/src/main/resources/templates/auth/sign-up.html
@@ -8,7 +8,7 @@
     <link href="/static/css/auth/sign-up.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://kit.fontawesome.com/87ed282d9d.js" crossorigin="anonymous"></script>
-    <title>비밀번호 재설정 • Instagram</title>
+    <title>회원가입 • Instagram</title>
 </head>
 <body>
     <main>
