--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -668,6 +668,22 @@
                     </div>
                 </div>
             </div>
+            <div class="change-password-main-div visible">
+                <div class="user-information-div">
+                    <img class="file-image" src="/static/image/profiles/Jordy.png" alt="프로필">
+                    <span class="user-nickname-span">dae._gyeong</span>
+                </div>
+                <div class="auth-input-div">
+                    <input type="password" placeholder="새 비밀번호">
+                    <input type="password" placeholder="새 비밀번호 확인">
+                </div>
+                <div class="chagne-password-button-div">
+                    <button class="change-password-button" type="button">비밀번호 변경</button>
+                </div>
+                <div class="skip-div">
+                    <button class="skip-button" type="button">건너뛰기</button>
+                </div>
+            </div>
         </div>
     </main>
     <script src="/static/js/main.js"></script>
