--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -11,25 +11,6 @@ main {
     position: relative;
 }
 
-aside {
-    display: flex;
-    align-items: center;
-
-    border-right: 1px solid #dbdbdb;
-    padding: 10px;
-
-    width: 335px;
-    height: 1007px;
-
-    background-color: white;
-
-    position: fixed;
-    left: 0px;
-
-    transition-property: width;
-    transition-duration: 1s;
-}
-
 .flex-align-center {
     display: flex;
     align-items: center;
@@ -57,206 +38,6 @@ aside {
     background-color: white;
 }
 
-.nav-div {
-    display: flex;
-    flex-direction: column;
-
-    width: 335px;
-}
-
-.logo-div {
-    display: flex;
-    align-items: center;
-
-    border-radius: 50%;
-    margin: 30px 0px 30px 12px;
-
-    width: 40px;
-    height: 40px;
-}
-
-.logo-div img {
-    width: 103px;
-    height: 30px;
-
-    cursor: pointer;
-}
-
-.logo-div i {
-    font-size: 27px;
-    cursor: pointer;
-}
-
-.aside-ul {
-    height: 823px;
-}
-
-.aside-ul li {
-    display: flex;
-    align-items: center;
-
-    border-radius: 50px;
-    margin: 20px 0px 20px 12px;
-}
-
-.more-menu-div {
-    display: flex;
-    align-items: center;
-
-    border-radius: 50px;
-    margin: 0px 0px 20px 12px;
-}
-
-.aside-ul li span, .more-menu-div span {
-    font-size: 20px;
-    font-weight: 300;
-}
-
-.aside-ul li:hover, .more-menu-div:hover {
-    background-color: #efefef;
-
-    cursor: pointer;
-}
-
-.aside-ul li > div, .more-menu-div > div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    width: 40px;
-    height: 40px;
-}
-
-.aside-ul li i, .more-menu-div i {
-    font-size: 20px;
-    cursor: pointer;
-}
-
-.main-search-div {
-    border-left: 1px solid #dbdbdb;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    padding: 10px;
-
-    width: 397px;
-    height: 1007px;
-
-    background-color: white;
-
-    box-shadow: 20px 0px 20px 0px #dbdbdb;
-}
-
-.search-div {
-    border-bottom: 1px solid #dbdbdb;
-}
-
-.search-header {
-    margin-top: 20px;
-}
-
-.search-header h1 {
-    font-size: 22px;
-    font-weight: 500;
-}
-
-.search-input {
-    border: none;
-    border-radius: 10px;
-    margin: 20px 0px;
-    padding: 10px;
-
-    width: 340px;
-    height: 40px;
-    background-color: rgb(239, 239, 239);
-}
-
-.search-notice-div {
-    margin: 20px 0px;
-}
-
-.search-notice-div h1, .alert-header h1 {
-    font-size: 20px;
-    font-weight: 500;
-}
-
-.main-alert-div {
-    border-left: 1px solid #dbdbdb;
-    padding: 10px;
-
-    width: 397px;
-    height: 1007px;
-
-    background-color: white;
-}
-
-.alert-header {
-    margin-bottom: 10px;
-    padding: 10px;
-}
-
-.alert-notice-p {
-    margin-bottom: 10px;
-    padding: 10px;
-
-    font-size: 18px;
-    font-weight: 400;
-}
-
-.alert-ul li {
-    display: flex;
-    align-items: center;
-
-    padding:10px;
-
-
-    width: 387px;
-
-    cursor: pointer;
-}
-
-.alert-ul li:hover {
-    background-color: #f5f5f5;
-}
-
-.alert-ul li > span {
-    display: block;
-
-    margin: 0px 25px 0px 15px;
-
-    width: 179px;
-}
-
-.alert-ul li:last-child {
-    margin-bottom: 10px;
-}
-
-.alert-ul .user-nickname-span {
-    font-weight: 600;
-}
-
-.alert-ul .alert-date {
-    color: #8e8e8e;
-}
-
-.alert-ul .follow-request-button {
-    border: none;
-    border-radius: 5px;
-
-    width: 80px;
-    height: 32px;
-
-    font-weight: 600;
-}
-
-.alert-ul .follow-request-button:hover {
-    background-color: rgb(219, 219, 219);
-}
-
-.alert-ul .user-image {
-    width: 44px;
-    height: 44px;
-}
-
 .user-profile-li img {
     width: 24px;
     height: 24px;
@@ -267,6 +48,22 @@ aside {
 
     width: 470px;
     height: 119px;
+
+    overflow: auto;
+}
+
+.story-div::-webkit-scrollbar {
+    height: 5px;
+}
+
+.story-div::-webkit-scrollbar-thumb {
+    height: 17%;
+    
+    background-color: rgba(26, 26, 26, .8);
+}
+
+.story-div::-webkit-scrollbar-track {
+    background-color: rgba(26, 26, 26, .1);
 }
 
 .story-ul li {
@@ -527,686 +324,6 @@ aside {
 
 /* Modal */
 
-.main-modal-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    width: 1920px;
-    height: 1007px;
-
-    position: absolute;
-    top: 0px;
-    left: -390px;
-
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
-.upload-picture-and-video-modal {
-    border-radius: 10px;
-
-    width: 790px;
-    height: 830px;
-
-    background-color: white;
-}
-
-.modal-header-div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    border-bottom: 1px solid #dbdbdb;
-    padding: 10px 10px;
-}
-
-.modal-header-div button {
-    border: none;
-    background-color: white;
-
-    font-size: 17px;
-    font-weight: 500;
-}
-
-.next-button {
-    color: #0095f6;
-}
-
-.next-button:hover {
-    color: #1D3C78;
-}
-
-.modal-header-div h1 {
-    font-size: 17px;
-    font-weight: 500;
-}
-
-.board-content-div {
-    display: flex;
-    align-items: center;
-}
-
-.upload-content {
-    display: flex;
-    align-items: center;
-
-    overflow: hidden;
-}
-
-.upload-file-div {
-    width: 790px;
-}
-
-.upload-content form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    height: 784px;
-}
-
-.upload-content .notice-p {
-    margin: 10px 0px;
-    font-size: 25px;
-}
-
-.select-file-label {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-
-    border-radius: 5px;
-    padding-top: 3px;
-
-    width: 133px;
-    height: 30px;
-
-    background-color: #0095f6;
-    color: white;
-
-    cursor: pointer;
-}
-
-.select-file-label:hover {
-    background-color: #1877f8;
-
-}
-
-.swiper1 {
-    position: relative;
-    
-    overflow: hidden;
-}
-
-.swiper-wrapper {
-    width: 790px !important;
-}
-
-.swiper-slide {
-    height: 784px;
-}
-
-.swiper-slide img {
-    width: 790px;
-    height: 784px;
-}
-
-.swiper-button-next, .swiper-button-prev {
-    border-radius: 50%;
-
-    height: 28px !important;
-
-    color: white !important;
-    background-color: rgba(26, 26, 26, .8);
-}
-
-.swiper-button-next {
-    left: 750px !important;
-}
-
-.swiper-button-prev {
-    left: 10px !important
-}
-
-.swiper-button-next::after, .swiper-button-prev::after {
-    display: none;
-}
-
-.swiper-button-disabled {
-    display: none !important;
-}
-
-.swiper-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    padding: 10px;
-
-    width: 784px;
-
-    position: absolute;
-
-    bottom: 30px;
-
-    z-index: 1;
-}
-
-.left-icons {
-    display: flex;
-    align-items: center;
-}
-
-.left-icons button:first-child {
-    margin-right: 20px;
-}
-
-.swiper-footer button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    border: none;
-    border-radius: 50%;
-
-    width: 40px;
-    height: 40px;
-
-    background-color: rgba(26, 26, 26, .8);
-
-    cursor: pointer !important;
-}
-
-.swiper-footer button i {
-    font-size: 20px;
-    color: white;
-}
-
-.swiper-footer button:hover, .swiper-button-next:hover, .swiper-button-prev:hover {
-    background-color: rgba(26, 26, 26, .5);
-}
-
-.uploaded-file-list-div {
-    display: flex;
-    justify-content: end;
-    align-items: flex-start;
-    
-    border-radius: 10px;
-    padding: 10px;
-
-    width: 786px;
-    height: 118px;
-
-
-    position: absolute;
-    left: 0px;
-    bottom: 120px;
-
-    z-index: 1;
-}
-
-.file-list-div {
-    display: flex;
-    align-items: center;
-
-    border-radius: 10px;
-    padding-right: 10px;
-
-    max-width: 780px;
-    height: 140px;
-
-    background-color: rgba(26, 26, 26, .8);
-
-    z-index: 1;
-    overflow: auto;
-}
-
-.file-list-div::-webkit-scrollbar {
-    width: 6px;
-}
-
-.file-list-div::-webkit-scrollbar-thumb {
-    height: 17%;
-    
-    background-color: rgba(26, 26, 26, .8);
-}
-
-.file-list-div::-webkit-scrollbar-track {
-    background-color: rgba(26, 26, 26, .1);
-}
-
-.uploaded-file-div {
-    margin-left: 10px;
-
-    position: relative;
-}
-
-.cancel-mark-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    border-radius: 50%;
-
-    width: 20px;
-    height: 20px;
-
-    position: absolute;
-    top: 5px;
-    right: 5px;
-
-    cursor: pointer;
-
-    background-color: rgba(26, 26, 26, .8);
-}
-
-.cancel-mark-div:hover {
-    background-color: rgba(26, 26, 26, .4);
-}
-
-.uploaded-file-div i {
-    color: white;
-    font-size: 10px;
-}
-
-.uploaded-file-div img {
-    width: 106px;
-    height: 98px;
-
-    cursor: pointer;
-}
-
-.add-file-input-form {
-    width: 50px;
-    height: 50px;
-}
-
-.add-file-label {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    border: 1px solid white;
-    border-radius: 50%;
-
-    margin-left: 10px;
-
-    width: 50px;
-    height: 50px;
-
-    font-size: 30px;
-
-    color: white;
-    background-color: rgba(26, 26, 26, .3);
-
-    cursor: pointer;
-}
-
-.tag-div {
-    border-radius: 10px;
-
-    width: 338px;
-    height: 226px;
-
-    position: absolute;
-
-    box-shadow: 1px 1px 10px 0.1px;
-
-    z-index: 3;
-    background-color: white;
-}
-
-.tag-header {
-    display: flex;
-    align-items: center;
-
-    border-bottom: 1px solid #dbdbdb;
-    padding: 10px;
-}
-
-.tag-header .notice-div span {
-    color: black;
-
-    font-size: 18px;
-    font-weight: 400;
-}
-
-.tag-search-input {
-    border: none;
-    margin-left: 5px;
-    padding: 4px 12px 4px 0px;
-
-    width: 250px;
-    height: 20px;
-
-    font-size: 16px;
-
-    outline: none;
-}
-
-.tag-result-div {
-    width: 338px;
-    height: 180px;
-
-    overflow: auto;
-}
-
-.tag-result-li {
-    padding: 10px 20px;
-
-    cursor: pointer;
-}
-
-.tag-result-li:hover {
-    background-color: #8e8e8e;
-}
-
-.tag-result-li img {
-    border: none;
-
-    width: 46px;
-    height: 46px;
-}
-
-.tag-result-li .user-information-div {
-    display: flex;
-    align-items: center;
-}
-
-.user-name-information-div {
-    display: flex;
-    flex-direction: column;
-
-    margin-left: 15px;
-}
-
-.content-div {
-    /* border-left: 1px solid #dbdbdb; */
-    padding: 0px;
-
-    width: 339px;
-    /* height: 784px; */
-
-    overflow: auto;
-}
-
-.content-div .user-information-div {
-    display: flex;
-    align-items: center;
-
-    padding: 10px;
-}
-
-.content-div .user-image-div {
-    margin-right: 10px;
-}
-
-.content-div .user-image {
-    width: 38px;
-    height: 38px;
-}
-
-.content-div .user-nickname-span {
-    font-weight: 500;
-}
-
-.content-textarea {
-    border: none;
-    padding: 10px;
-
-    width: 322px;
-    height: 168px;
-
-    resize: none;
-    outline: none;
-}
-
-.content-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    border-bottom: 1px solid #dbdbdb;
-
-    height: 44px;
-}
-
-.content-footer div {
-    padding: 10px;
-}
-
-.count-span {
-    font-size: 13px;
-
-    color: #c7c7c7;
-}
-
-.content-div .option {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    border-bottom: 1px solid #dbdbdb;
-    padding: 5px 16px;
-
-    width: 339px;
-}
-
-.option-title-div {
-    display: flex;
-    align-items: center;
-
-    width: 339px;
-    height: 40px;
-}
-
-
-.location-input {
-    border: none;
-
-    width: 270px;
-    height: 40px;
-
-    font-size: 18px;
-
-    outline: none;
-}
-
-.option-icon-div {
-    margin-left: 20px;
-}
-
-.content-div .notice-div p {
-    font-size: 18px;
-    font-weight: 300;
-}
-
-.content-div .notice-div {
-    width: 270px;
-    height: 40px;
-}
-
-.option-content-div .notice-span {
-    font-size: 12px;
-    color: #8e8e8e;
-}
-
-.file-option-detail-div {
-    display: flex;
-    align-items: center;
-
-    margin: 10px 0px;
-}
-
-.file-option-detail-div img {
-    width: 44px;
-    height: 44px;
-}
-
-.file-option-detail-div input {
-    border: 1px solid #dbdbdb;
-    border-radius: 10px;
-    margin-left: 10px;
-    padding: 10px;
-
-    width: 238px;
-    height: 44px;
-
-    outline: none;
-}
-
-.hide-like-and-view-option-div {
-    margin-bottom: 10px;
-}
-
-.comment-option-div {
-    margin-bottom: 30px;
-}
-
-.setting-header-div {
-    display: flex;
-    align-items: center;
-
-    margin-bottom: 10px;
-}
-
-.setting-title-div {
-    width: 246px;
-}
-
-.setting-title-span {
-    font-size: 20px;
-    font-weight: 300;
-}
-
-.setting-on-off-div {
-    width: 44px;
-
-    position: relative;
-}
-
-.on-off-outer-label {
-    display: block;
-
-    border: none;
-    border-radius: 43%;
-    padding: 0px 5px;
-
-    width: 50px;
-    height: 34px;
-
-    background-color: #8e8e8e;
-
-    cursor: pointer;
-}
-
-.on-off-div {
-    border-radius: 50%;
-
-    width: 20px;
-    height: 20px;
-
-    background-color: white;
-
-    transition-property: all;
-    transition-duration: 1s;
-
-    cursor: pointer;
-
-    position: absolute;
-    top: 7px;
-    left: 5px;
-}
-
-.x-mark-div {
-    position: absolute;
-    top: 50px;
-    right: 50px;
-
-    font-size: 25px;
-    font-weight: 500;
-
-    color: white;
-
-    cursor: pointer;
-}
-
-.remove-notice-modal-outer-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    width: 1920px;
-    height: 1007px;
-
-    position: absolute;
-
-    background-color: rgba(0, 0, 0, 0.5);
-    
-    z-index: 1;
-}
-
-.remove-notice-modal-div {
-    border-radius: 10px;
-
-    width: 400px;
-    height: 200px;
-
-    background-color: white;
-
-    z-index: 2;
-}
-
-.remove-notice-modal-div button {
-    border: none;
-
-    font-size: 18px;
-    font-weight: 400;
-
-    background-color: white;
-}
-
-.remove-notice-div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-
-    width: 400px;
-    height: 100px;
-}
-
-.remove-notice-div h1, .remove-notice-div p {
-    text-align: center;
-}
-
-.remove-notice-div h1 {
-    font-size: 20px;
-}
-
-.remove-notice-div p {
-    padding-top: 10px;
-
-    color: #8e8e8e;
-}
-
-.remove-div, .cancel-div {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-
-    border-top: 1px solid #dbdbdb;
-
-    height: 50px;
-
-    cursor: pointer;
-}
-
-.remove-div .remove-button {
-    color: red;
-}
-
 .change-password-main-div {
     display: flex;
     flex-direction: column;
@@ -1282,49 +399,6 @@ aside {
 }
 
 /* Event */
-
-.small-aside {
-    padding: 10px 10px 10px 0px;
-    width: 60px;
-}
-
-.change-logo {
-    justify-content: center;
-}
-
-.select-nav-li {
-    border: 1px solid #dbdbdb;
-    border-radius: 50%;
-
-    margin-left: 10px !important;
-    padding: 0px !important;
-}
-
-.select-nav-i {
-    font-size: 25px !important;
-    font-weight: 700 !important;
-}
-
-.select-nav-span {
-    font-weight: 500 !important;
-}
-
-.write-board-modal-view {
-    width: 1128px !important;
-}
-
-.on {
-    background-color: #0095f6;
-}
-
-.move-right {
-    transform: translate(20px);
-}
-
-.stop-scroll {
-    height: 100%;
-    overflow: hidden;
-}
 
 .visible {
     display: none;
