프로필 HTML 작성, 프로필 편집 HTML 작성중

--- a/src/main/resources/static/css/dm/direct_message.css
+++ b/src/main/resources/static/css/dm/direct_message.css
@@ -144,7 +144,7 @@ main {
     margin-top: 10px;
 }
 
-.send-message-button {
+.send-message-main-div .send-message-button {
     border: none;
     border-radius: 10px;
 
