--- a/src/main/resources/templates/dm/direct-message.html
+++ b/src/main/resources/templates/dm/direct-message.html
@@ -26,7 +26,7 @@
                                 dae._gyeong
                                 <i class="fa-solid fa-chevron-down"></i>
                             </div>
-                            <i class="fa-regular fa-pen-to-square"></i>
+                            <i class="fa-regular fa-pen-to-square send-message-button"></i>
                         </div>
                         <ul class="people-ul">
                             <li>
@@ -127,7 +127,7 @@
                     </section>
                 </div>
             </div>
-            <div class="modal-outer-div">
+            <div class="modal-outer-div visible">
                 <div class="send-message-search-main-div">
                     <div class="send-message-search-header-div border-bottom">
                         <i class="fa-solid fa-x search-modal-cancel-button"></i>
