--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -29,7 +29,7 @@
                         </div>
                         <div class="save-user-div">
                             <input type="checkbox" id="save-user-checkbox" class="save-user-checkbox cursor" name="remember-me">
-                            <label class="cursor" for="save-user-checkbox">로그인 유지</label>
+                            <label class="cursor" for="save-user-checkbox">로그인 정보 유지하기</label>
                         </div>
                         <button class="login-button">로그인</button>
                         <div class="line-div">
