--- a/src/main/resources/templates/auth/sign-up.html
+++ b/src/main/resources/templates/auth/sign-up.html
@@ -33,10 +33,11 @@
                         <div class="line"></div>
                     </div>
                     <div class="auth-input-div">
-                        <input type="text" placeholder="휴대폰 번호 또는 이메일 주소">
-                        <input type="text" placeholder="성명">
-                        <input type="text" placeholder="사용자 이름">
-                        <input type="password" placeholder="비밀번호">
+                        <input class="user-phone-number-and-email-input" type="text" placeholder="휴대폰 번호 또는 이메일 주소">
+                        <input class="user-name-input" type="text" placeholder="성명">
+                        <input class="user-ninckname-input" type="text" placeholder="사용자 이름">
+                        <input class="user-password-input" type="password" placeholder="비밀번호">
+                        <p class="notice-p">특수문자,대문자,소문자,숫자를 포함한 8~14자로 작성해주세요.</p>
                     </div>
                     <div class="notice-div">
                         <span class="notice-span">저희 서비스를 이용하는 사람이 회원님의 연락처 정보를 Instagram에 업로드했을 수도 있습니다.</span>
