로그인 테스트코드 작성 및 구현

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -24,8 +24,8 @@
                             <!-- <img src="/image/images/instagram-char-log.png" alt="인스타그램 글자 로고"> -->
                         </div>
                         <div class="flex-column">
-                            <input type="text" class="auth-input" placeholder="전화번호, 사용자 이름 또는 이메일">
-                            <input type="password" class="auth-input" placeholder="비밀번호">
+                            <input type="text" class="auth-input" name="username" placeholder="전화번호, 사용자 이름 또는 이메일">
+                            <input type="password" class="auth-input" name="password" placeholder="비밀번호">
                         </div>
                         <div class="save-user-div">
                             <input type="checkbox" id="save-user-checkbox" class="save-user-checkbox cursor" name="remember-me">
