--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -340,6 +340,7 @@
             </div>
         </div>
     </main>
+    <script src="/static/js/auth/principal.js"></script>
     <script src="/static/js/fragments/aside.js"></script>
     <script src="/static/js/fragments/board.js"></script>
     <script src="/static/js/main.js"></script>
