게시글 전체 COUNT 로드 테스트 코드 작성

--- a/src/main/resources/templates/fragments/aside.html
+++ b/src/main/resources/templates/fragments/aside.html
@@ -74,9 +74,12 @@
                 <input class="search-input" type="search" placeholder="검색">
             </div>
         </div>
-        <div class="searh-result-div">
+        <div class="search-result-div">
             <div class="search-notice-div">
                 <h1>최근 검색 항목</h1>
+            </div>
+            <div class="search-result-list-div flex-justice-align-center">
+                <span class="notice-span">최근 검색 내역 없음.</span>
             </div>
         </div>
     </div>
