--- a/src/main/resources/templates/auth/profile.html
+++ b/src/main/resources/templates/auth/profile.html
@@ -122,7 +122,9 @@
         </div>
     </main>
     <th:block th:replace="fragments/footer"></th:block>
+    <script src="/static/js/auth/principal.js"></script>
     <script src="/static/js/fragments/aside.js"></script>
+    <script src="/static/js/fragments/board.js"></script>
     <script src="/static/js/auth/profile.js"></script>
 </body>
 </html>
