사용자 기본 정보 불러오는 로직 수정에 따라 테스트코드 변경

--- a/src/main/resources/static/css/auth/profile.css
+++ b/src/main/resources/static/css/auth/profile.css
@@ -15,6 +15,10 @@ main {
     height: 1003px;
 }
 
+.main-content {
+    padding-left: 335px;
+}
+
 .user-profile-main-div {
     padding: 30px 20px 0px 20px;
 
