--- a/src/main/resources/static/css/fragments/footer.css
+++ b/src/main/resources/static/css/fragments/footer.css
@@ -5,22 +5,22 @@ footer {
     align-items: center;
 }
 
-ul {
+footer ul {
     display: flex;
 }
 
-ul:nth-of-type(2) {
+footer ul:nth-of-type(2) {
     margin-top: 10px;
 }
 
-ul li {
+footer ul li {
     margin: 0px 10px;
 
     font-size: 12px;
     color: #828282;
 }
 
-select {
+footer select {
     border: none;
 
     outline: none;
