--- a/src/main/resources/templates/auth/profile.html
+++ b/src/main/resources/templates/auth/profile.html
@@ -120,6 +120,7 @@
                 </div>
             </div>
         </div>
+        <th:block th:replace="fragments/board"></th:block>
     </main>
     <th:block th:replace="fragments/footer"></th:block>
     <script src="/static/js/auth/principal.js"></script>
