유저프로필 조회 실패 테스트 코드 작성 및 savedBoardList 로드 구현

--- a/src/main/resources/templates/auth/profile.html
+++ b/src/main/resources/templates/auth/profile.html
@@ -35,14 +35,17 @@
                                     </div>
                                 </div>
                                 <div class="board-and-follow-div">
-                                    <div class="board-div">
-                                        게시물 <span class="board-span">0</span>
+                                    <div class="board-information-div">
+                                        <span>게시물</span>
+                                        <span class="board-span">0</span>
                                     </div>
-                                    <div class="follower-div">
-                                        팔로워 <span class="follower-span">123</span>
+                                    <div class="follower-information-div">
+                                        <span>팔로워</span>
+                                        <span class="follower-span">123</span>
                                     </div>
-                                    <div class="following-div">
-                                        팔로우 <span class="following-span">200</span>
+                                    <div class="following-information-div">
+                                        <span>팔로우</span>
+                                        <span class="following-span">200</span>
                                     </div>
                                 </div>
                                 <div class="user-name-div">
